--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,9 +1,9 @@
-#develop build
+#production build
 FROM node:12-alpine
 WORKDIR /app
-ENV NODE_ENV develop
+ENV NODE_ENV production
 COPY package.json package-lock.json /app/
 RUN npm ci
 COPY config /app/config
 COPY src /app/src
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:production"]
