--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
     speedtestapi:
         build:
-            target: staging
+            dockerfile: Dockerfile.staging
 
         container_name: speedtestApiStg
 
