--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,4 +27,5 @@ services:
             PGDATA: '/var/lib/postgresql/data/pgdata'
 
 volumes:
-    speedtestApiPostgresqlData: {}
+    speedtestApiPostgresqlData:
+        driver: local
