--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -4,6 +4,7 @@ WORKDIR /app
 ENV NODE_ENV production
 COPY package.json package-lock.json /app/
 RUN npm ci
+COPY healthcheck.js /app/healthcheck.js
 COPY config /app/config
 COPY src /app/src
 CMD ["npm", "run", "start:production"]
