--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,6 +17,9 @@ services:
     postgres:
         container_name: speedtestApiPostgresqlDev
 
+        healthcheck:
+            test: ["CMD-SHELL", "pg_isready -U ${PG_USER-speedtestApiDev}"]
+
         environment:
             FORCE_COLOR: 1
             POSTGRES_USER: ${PG_USER-speedtestApiDev}
